# api/swagger.yml
@@ -85,7 +85,7 @@ paths:
   /logout:
     delete:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Logout
       responses:
         '200':
@@ -95,7 +95,7 @@ paths:
   /profile:
     get:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: User profile
       responses:
         '200':
@@ -119,7 +119,7 @@ paths:
           description: Authorization needed
     patch:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Update user profile
       requestBody:
         required: true
@@ -160,7 +160,7 @@ paths:
           description: Authorization need
     delete:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Delete user
       responses:
         '200':
@@ -243,10 +243,46 @@ paths:
                       type: string
         '401':
           description: Authorization needed
+  /sights/search:
+    get:
+      parameters:
+        - in: query
+          name: search
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: skip
+          required: true
+          schema:
+            type: integer
+        - in: query
+          name: limit
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Found sight
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  lng:
+                    type: number
+                  lat:
+                    type: number
+        '400':
+          description: Bad request params
   /trip:
     post:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Adding trip
       requestBody:
         required: true
@@ -315,7 +351,7 @@ paths:
   /trip/{id}:
     get:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -369,7 +405,7 @@ paths:
           description: No such trip
     patch:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -444,7 +480,7 @@ paths:
           description: Bad request
     delete:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -530,7 +566,7 @@ paths:
   /review:
     post:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Adding review
       requestBody:
         required: true
@@ -562,7 +598,7 @@ paths:
   /upload:
     post:
       security:
-        - cookieAuth: []
+        - cookieAuth: [ ]
       description: Adding review
       requestBody:
         required: true
