# pkg/services/sight/api.pb.go
@@ -414,6 +414,116 @@ func (x *GetSightResponse) GetSight() *Sight {
 	return nil
 }
 
+type SearchSightRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Search string `protobuf:"bytes,1,opt,name=search,proto3" json:"search,omitempty"`
+	Skip   int64  `protobuf:"varint,2,opt,name=skip,proto3" json:"skip,omitempty"`
+	Limit  int64  `protobuf:"varint,3,opt,name=limit,proto3" json:"limit,omitempty"`
+}
+
+func (x *SearchSightRequest) Reset() {
+	*x = SearchSightRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_pkg_services_sight_api_proto_msgTypes[7]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SearchSightRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SearchSightRequest) ProtoMessage() {}
+
+func (x *SearchSightRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_pkg_services_sight_api_proto_msgTypes[7]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SearchSightRequest.ProtoReflect.Descriptor instead.
+func (*SearchSightRequest) Descriptor() ([]byte, []int) {
+	return file_pkg_services_sight_api_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *SearchSightRequest) GetSearch() string {
+	if x != nil {
+		return x.Search
+	}
+	return ""
+}
+
+func (x *SearchSightRequest) GetSkip() int64 {
+	if x != nil {
+		return x.Skip
+	}
+	return 0
+}
+
+func (x *SearchSightRequest) GetLimit() int64 {
+	if x != nil {
+		return x.Limit
+	}
+	return 0
+}
+
+type SearchSightResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Sights []*Sight `protobuf:"bytes,1,rep,name=sights,proto3" json:"sights,omitempty"`
+}
+
+func (x *SearchSightResponse) Reset() {
+	*x = SearchSightResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_pkg_services_sight_api_proto_msgTypes[8]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SearchSightResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SearchSightResponse) ProtoMessage() {}
+
+func (x *SearchSightResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_pkg_services_sight_api_proto_msgTypes[8]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SearchSightResponse.ProtoReflect.Descriptor instead.
+func (*SearchSightResponse) Descriptor() ([]byte, []int) {
+	return file_pkg_services_sight_api_proto_rawDescGZIP(), []int{8}
+}
+
+func (x *SearchSightResponse) GetSights() []*Sight {
+	if x != nil {
+		return x.Sights
+	}
+	return nil
+}
+
 var File_pkg_services_sight_api_proto protoreflect.FileDescriptor
 
 var file_pkg_services_sight_api_proto_rawDesc = []byte{
@@ -460,31 +570,49 @@ var file_pkg_services_sight_api_proto_rawDesc = []byte{
 	0x73, 0x65, 0x12, 0x33, 0x0a, 0x05, 0x73, 0x69, 0x67, 0x68, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28,
 	0x0b, 0x32, 0x1d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67,
 	0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x53, 0x69, 0x67, 0x68, 0x74,
-	0x52, 0x05, 0x73, 0x69, 0x67, 0x68, 0x74, 0x32, 0xc5, 0x02, 0x0a, 0x0c, 0x53, 0x69, 0x67, 0x68,
-	0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x61, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x53,
-	0x69, 0x67, 0x68, 0x74, 0x73, 0x12, 0x28, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73,
-	0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47,
-	0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x28, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74,
-	0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68,
-	0x74, 0x73, 0x52, 0x65, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x5f, 0x0a, 0x08, 0x47,
-	0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x12, 0x27, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
-	0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x28, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68,
-	0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67,
-	0x68, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x71, 0x0a, 0x0e,
-	0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x42, 0x79, 0x49, 0x44, 0x73, 0x12, 0x2d,
-	0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f,
-	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74,
-	0x73, 0x42, 0x79, 0x49, 0x44, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2e, 0x2e,
+	0x52, 0x05, 0x73, 0x69, 0x67, 0x68, 0x74, 0x22, 0x68, 0x0a, 0x12, 0x53, 0x65, 0x61, 0x72, 0x63,
+	0x68, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x16, 0x0a,
+	0x06, 0x73, 0x65, 0x61, 0x72, 0x63, 0x68, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x73,
+	0x65, 0x61, 0x72, 0x63, 0x68, 0x12, 0x1b, 0x0a, 0x04, 0x73, 0x6b, 0x69, 0x70, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x03, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x22, 0x02, 0x28, 0x00, 0x52, 0x04, 0x73, 0x6b,
+	0x69, 0x70, 0x12, 0x1d, 0x0a, 0x05, 0x6c, 0x69, 0x6d, 0x69, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28,
+	0x03, 0x42, 0x07, 0xfa, 0x42, 0x04, 0x22, 0x02, 0x28, 0x00, 0x52, 0x05, 0x6c, 0x69, 0x6d, 0x69,
+	0x74, 0x22, 0x4c, 0x0a, 0x13, 0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x53, 0x69, 0x67, 0x68, 0x74,
+	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x35, 0x0a, 0x06, 0x73, 0x69, 0x67, 0x68,
+	0x74, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x1d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x06, 0x73, 0x69, 0x67, 0x68, 0x74, 0x73, 0x32,
+	0xb0, 0x03, 0x0a, 0x0c, 0x53, 0x69, 0x67, 0x68, 0x74, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x12, 0x61, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x12, 0x28, 0x2e,
 	0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73,
 	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73,
-	0x42, 0x79, 0x49, 0x44, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42,
-	0x2f, 0x5a, 0x2d, 0x73, 0x6e, 0x61, 0x6b, 0x65, 0x61, 0x6c, 0x69, 0x76, 0x65, 0x2f, 0x6d, 0x2f,
-	0x70, 0x6b, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2f, 0x73, 0x69, 0x67,
-	0x68, 0x74, 0x3b, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x28, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x52, 0x65, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x00, 0x12, 0x5f, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x12,
+	0x27, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74,
+	0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68,
+	0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x28, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
+	0x73, 0x65, 0x22, 0x00, 0x12, 0x71, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74,
+	0x73, 0x42, 0x79, 0x49, 0x44, 0x73, 0x12, 0x2d, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
+	0x47, 0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x42, 0x79, 0x49, 0x44, 0x73, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x2e, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73,
+	0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x47,
+	0x65, 0x74, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x42, 0x79, 0x49, 0x44, 0x73, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x69, 0x0a, 0x0c, 0x53, 0x65, 0x61, 0x72, 0x63,
+	0x68, 0x53, 0x69, 0x67, 0x68, 0x74, 0x73, 0x12, 0x2a, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x73, 0x2e, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
+	0x2e, 0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x2b, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x73,
+	0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x53, 0x65, 0x61,
+	0x72, 0x63, 0x68, 0x53, 0x69, 0x67, 0x68, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x00, 0x42, 0x2f, 0x5a, 0x2d, 0x73, 0x6e, 0x61, 0x6b, 0x65, 0x61, 0x6c, 0x69, 0x76, 0x65,
+	0x2f, 0x6d, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2f,
+	0x73, 0x69, 0x67, 0x68, 0x74, 0x3b, 0x73, 0x69, 0x67, 0x68, 0x74, 0x5f, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -499,7 +627,7 @@ func file_pkg_services_sight_api_proto_rawDescGZIP() []byte {
 	return file_pkg_services_sight_api_proto_rawDescData
 }
 
-var file_pkg_services_sight_api_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
+var file_pkg_services_sight_api_proto_msgTypes = make([]protoimpl.MessageInfo, 9)
 var file_pkg_services_sight_api_proto_goTypes = []interface{}{
 	(*Sight)(nil),                  // 0: services.sight_service.Sight
 	(*GetSightsByIDsRequest)(nil),  // 1: services.sight_service.GetSightsByIDsRequest
@@ -508,22 +636,27 @@ var file_pkg_services_sight_api_proto_goTypes = []interface{}{
 	(*GetSightsReponse)(nil),       // 4: services.sight_service.GetSightsReponse
 	(*GetSightRequest)(nil),        // 5: services.sight_service.GetSightRequest
 	(*GetSightResponse)(nil),       // 6: services.sight_service.GetSightResponse
+	(*SearchSightRequest)(nil),     // 7: services.sight_service.SearchSightRequest
+	(*SearchSightResponse)(nil),    // 8: services.sight_service.SearchSightResponse
 }
 var file_pkg_services_sight_api_proto_depIdxs = []int32{
 	0, // 0: services.sight_service.GetSightsByIDsResponse.sights:type_name -> services.sight_service.Sight
 	0, // 1: services.sight_service.GetSightsReponse.sights:type_name -> services.sight_service.Sight
 	0, // 2: services.sight_service.GetSightResponse.sight:type_name -> services.sight_service.Sight
-	3, // 3: services.sight_service.SightService.GetSights:input_type -> services.sight_service.GetSightsRequest
-	5, // 4: services.sight_service.SightService.GetSight:input_type -> services.sight_service.GetSightRequest
-	1, // 5: services.sight_service.SightService.GetSightsByIDs:input_type -> services.sight_service.GetSightsByIDsRequest
-	4, // 6: services.sight_service.SightService.GetSights:output_type -> services.sight_service.GetSightsReponse
-	6, // 7: services.sight_service.SightService.GetSight:output_type -> services.sight_service.GetSightResponse
-	2, // 8: services.sight_service.SightService.GetSightsByIDs:output_type -> services.sight_service.GetSightsByIDsResponse
-	6, // [6:9] is the sub-list for method output_type
-	3, // [3:6] is the sub-list for method input_type
-	3, // [3:3] is the sub-list for extension type_name
-	3, // [3:3] is the sub-list for extension extendee
-	0, // [0:3] is the sub-list for field type_name
+	0, // 3: services.sight_service.SearchSightResponse.sights:type_name -> services.sight_service.Sight
+	3, // 4: services.sight_service.SightService.GetSights:input_type -> services.sight_service.GetSightsRequest
+	5, // 5: services.sight_service.SightService.GetSight:input_type -> services.sight_service.GetSightRequest
+	1, // 6: services.sight_service.SightService.GetSightsByIDs:input_type -> services.sight_service.GetSightsByIDsRequest
+	7, // 7: services.sight_service.SightService.SearchSights:input_type -> services.sight_service.SearchSightRequest
+	4, // 8: services.sight_service.SightService.GetSights:output_type -> services.sight_service.GetSightsReponse
+	6, // 9: services.sight_service.SightService.GetSight:output_type -> services.sight_service.GetSightResponse
+	2, // 10: services.sight_service.SightService.GetSightsByIDs:output_type -> services.sight_service.GetSightsByIDsResponse
+	8, // 11: services.sight_service.SightService.SearchSights:output_type -> services.sight_service.SearchSightResponse
+	8, // [8:12] is the sub-list for method output_type
+	4, // [4:8] is the sub-list for method input_type
+	4, // [4:4] is the sub-list for extension type_name
+	4, // [4:4] is the sub-list for extension extendee
+	0, // [0:4] is the sub-list for field type_name
 }
 
 func init() { file_pkg_services_sight_api_proto_init() }
@@ -616,6 +749,30 @@ func file_pkg_services_sight_api_proto_init() {
 				return nil
 			}
 		}
+		file_pkg_services_sight_api_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SearchSightRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_pkg_services_sight_api_proto_msgTypes[8].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SearchSightResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -623,7 +780,7 @@ func file_pkg_services_sight_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_pkg_services_sight_api_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   7,
+			NumMessages:   9,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
